decal-macros/tests/ui/fail/scene_recursion.rs
use decal::decal;

fn main() {
    let scene = decal! {
        Row {
            Scene(scene)
        }
    };
}
